# learning-actix-web

./: Cargo.toml  README.md  cert.pem  key.pem
docs/: ch00-01-welcome.md  ch00-02-whatis.md  ch01-01-getting-started.md  ch01-02-application.md  ch01-03-server.md  ch01-04-extractors.md  ch01-05-handlers.md  ch02-01-errors.md  ch02-02-url-dispatch.md  ch02-05-testing.md
src/: main.rs
src/routes/: application.rs  errors.rs  extractors.rs  handlers.rs  mod.rs  server.rs  testing.rs  url_dispatch.rs
static/: index.html
